# python-bridge-game-library

./: .gitignore  LICENSE.txt  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-publish-to-pypi.yml  python-tests.yml
src/bridgelib/: bridge.py  constants.py
tests/: test_bridge.py  test_constants.py
