[metadata]
name = bridgelib
version = 0.1.0
license = LICENCE.txt
description = Python Bridge Card Game library
long_description = file: README.rst
author = Wojciech Peisert
author_email = wojtekp@sauron.pl
classifiers=

[project.urls]
"Homepage" = "https://github.com/wpeisert/python-bridge-game-library"
"Bug Tracker" = "https://github.com/wpeisert/python-bridge-game-library/issues"

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src